syntax = "proto3";

option go_package = "github.com/NeverlandMJ/ToDo/user-service/userpb";

package userpb;

service UserService {
    rpc SendCode(RequestPhone) returns (RequestPhone) {}
    rpc RegisterUser(Code) returns (ResponseUser) {}
    rpc SignIn(SignInUer) returns (User) {}
    rpc ChangePassword(RequestChangePassword) returns (Empty) {}
    rpc ChangeUserName(RequestUserName) returns (Empty) {}
    rpc DeleteAccount(RequestDeleteAccount) returns (Empty) {}
}

message Empty {}

message RequestDeleteAccount {
    string userID = 1;
    string password = 2;
    string user_name = 3;
}

message RequestChangePassword {
    string userID = 1;
    string old_password = 2;
    string new_password = 3;
}

message RequestUserName {
    string userID = 1;
    string user_name = 2;
}

message RequestPhone {
    string Phone = 1;
}

message Code {
    string Phone = 1;
    string Code = 2;
}

message ResponseUser {
    string UserName = 1;
    string Password = 2;
}

message SignInUer {
    string UserName = 1;
    string Password = 2;
}

message User {
    string ID = 1;
    string UserName = 2;
    string Password = 3;
    string Phone = 4;
    string CreatedAt = 5;
    string UpdatedAt = 6;
    bool IsBlocked = 7;
}